feat(gitea,keycloak): leverage cnpg db/role management

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
@@ -48,6 +48,16 @@ spec:
         env:
         - name: TZ
           value: Europe/London
+        - name: GITEA__database__USER
+          valueFrom:
+            secretKeyRef:
+              name: gitea-postgres-credentials
+              key: username
+        - name: GITEA__database__PASSWD
+          valueFrom:
+            secretKeyRef:
+              name: gitea-postgres-credentials
+              key: password
         ports:
         - containerPort: 3000
           name: http
