--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/database-credentials.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/database-credentials.yaml
@@ -8,7 +8,8 @@ spec:
     kind: ClusterSecretStore
   refreshInterval: 5m
   target:
-    type: kubernetes.io/basic-auth
+    template:
+      type: kubernetes.io/basic-auth
     deletionPolicy: Delete
   data:
   - secretKey: username
