--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/configmap.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/configmap.yaml
@@ -33,6 +33,8 @@ data:
     DB_TYPE  = postgres
     HOST     = postgres-tk831-default-rw:5432
     NAME     = gitea
+    USER     = %%GITEA__database__USER%%
+    PASSWD   = %%GITEA__database__PASSWD%%
     SSL_MODE = disable
 
     [session]
