--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
@@ -44,7 +44,8 @@ spec:
             secretKeyRef:
               name: gitea-postgres-credentials
               key: password
-        args: |
+        args:
+        - |
           echo Initialising config
           mkdir -p /data/gitea/conf
           cp /conf/app.ini /data/gitea/conf/app.ini
