fix(gitea): perl use -e flag

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
@@ -53,7 +53,7 @@ spec:
           cat /data/gitea/conf/app.ini
           echo "### END CONFIG ###"
           echo "Injecting secrets"
-          perl -pi 's/%%([A-Za-z_][A-Za-z0-9_]*)%%/$ENV{$1} || ""/ge' /data/gitea/conf/app.ini
+          perl -pi -e 's/%%([A-Za-z_][A-Za-z0-9_]*)%%/$ENV{$1} || ""/ge' /data/gitea/conf/app.ini
           chmod -R 777 /data/gitea/conf
         volumeMounts:
         - name: gitea-config
