feat(postgres-default): add management of nextcloud and paperless app users

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/postgres-default/cluster.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/postgres-default/cluster.yaml
@@ -37,6 +37,20 @@ spec:
       login: true
       passwordSecret:
         name: postgres-tk831-default-role-keycloak
+    - name: nextcloud
+      ensure: present
+      comment: Nextcloud app user
+      superuser: false
+      login: true
+      passwordSecret:
+        name: postgres-tk831-default-role-nextcloud
+    - name: paperless
+      ensure: present
+      comment: Paperless app user
+      superuser: false
+      login: true
+      passwordSecret:
+        name: postgres-tk831-default-role-paperless
   externalClusters:
   - name: postgres-default
     barmanObjectStore:
