--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/volsync-system/volsync/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/volsync-system/volsync/kustomization.yaml
@@ -1,3 +1,5 @@
+resources:
+- https://github.com/kubernetes-csi/external-snapshotter/client/config/crd
 helmCharts:
 - releaseName: volsync
   name: volsync
