--- a/kubernetes/by-cluster/red-squadron-talos/blunge/applications/by-namespace/blunge/blungebot/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/blunge/applications/by-namespace/blunge/blungebot/kustomization.yaml
@@ -5,5 +5,6 @@ configMapGenerator:
   files:
   - files/config.yaml
 resources:
-- resources/statefulset.yaml
+- resources/deployment.yaml
+- resources/storage-data.yaml
 - resources/service-credentials-secret.yaml
