--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/deployment.yaml
@@ -63,7 +63,7 @@ spec:
           mountPath: /data/gitea
       containers:
       - name: gitea
-        image: gitea/gitea:nightly
+        image: gitea/gitea:1.25.3
         imagePullPolicy: IfNotPresent
         env:
         - name: TZ
