feat: add basic terraform host config for red-one and tardis (#3)
Additionally create docker-services VM for migrating tardis services into

Reviewed-on: https://gitea.tk831.net/Ops/device-config/pulls/3

--- a/mise.toml
+++ b/mise.toml
@@ -1,7 +1,9 @@
 [tools]
 argocd = "2.13.3"
+opentofu = "1.11.1"
 python = { version = "3.13.1", virtualenv = ".venv" }
 terraform = "1.11.4"
+terragrunt = "0.96.1"
 uv = "0.5.11"
 vault = "1.18.3"
 velero = "1.14.0"
