--- a/ansible/machines/tardis/configure.yaml
+++ b/ansible/machines/tardis/configure.yaml
@@ -2,10 +2,22 @@
   remote_user: wtaylor
   roles:
   - role: ../../common/roles/proxmox-configure-nonprod-sources
+  - role: ../../common/roles/create-user
+    username: wtaylor
+    password: "{{(lookup('community.hashi_vault.vault_kv2_get', 'system/device-config/wtaylor-proxmox-credentials', url=vault_address, engine_mount_point=vault_secret_mount)).secret.password }}"
+    salt: "{{(lookup('community.hashi_vault.vault_kv2_get', 'system/device-config/wtaylor-proxmox-credentials', url=vault_address, engine_mount_point=vault_secret_mount)).secret.salt }}"
   - role: ../../common/roles/update-system
-  - role: ./roles/enable-vfio
-  - role: ./roles/reserve-gpu
-  - role: ./roles/upload-gpu-rom
-  - role: ./roles/export-nfs-shares
-  - role: ./roles/configure-csi-provisioning
+  # - role: ./roles/enable-vfio
+  # - role: ./roles/reserve-gpu
+  # - role: ./roles/upload-gpu-rom
   - role: ./roles/configure-remote-backups
+  - role: ../../common/roles/proxmox-notifications
+    mailer_name: admin-mail
+    matcher_name: admin-matcher
+    author: Proxmox VE - Red Squadron
+    from_address: system@tk831.net
+    mailto_users: [wtaylor@pam]
+    mode: starttls
+    smtp_server: smtp.protonmail.ch
+    smtp_username: "{{(lookup('community.hashi_vault.vault_kv2_get', 'system/device-config/protonmail-smtp-credentials', url=vault_address, engine_mount_point=vault_secret_mount)).secret.username }}"
+    smtp_password: "{{(lookup('community.hashi_vault.vault_kv2_get', 'system/device-config/protonmail-smtp-credentials', url=vault_address, engine_mount_point=vault_secret_mount)).secret.password }}"
