--- a/ansible/machines/red-squadron/configure.yaml
+++ b/ansible/machines/red-squadron/configure.yaml
@@ -4,6 +4,7 @@
   - import_tasks: ../../common/handlers/global.yaml
   roles:
   - role: ../../common/roles/proxmox-configure-nonprod-sources
+  - role: ../../common/roles/update-system
   - role: ../../common/roles/create-user
     username: wtaylor
     password: "{{(lookup('community.hashi_vault.vault_kv2_get', 'system/device-config/wtaylor-proxmox-credentials', url=vault_address, engine_mount_point=vault_secret_mount)).secret.password }}"
