--- a/ansible/machines/red-squadron/configure.yaml
+++ b/ansible/machines/red-squadron/configure.yaml
@@ -4,6 +4,7 @@
   - import_tasks: ../../common/handlers/global.yaml
   roles:
   - role: ../../common/roles/proxmox-configure-nonprod-sources
+  - role: ../../common/roles/proxmox-disable-subscription-nag
   - role: ../../common/roles/update-system
   - role: ../../common/roles/create-user
     username: wtaylor
