feat(container-services): migrate docker-services host to ublue ucore
Additionally renamed project to container-services, all podman based

--- a/mise.toml
+++ b/mise.toml
@@ -1,5 +1,6 @@
 [tools]
 argocd = "2.13.3"
+"github:coreos/butane" = "0.25.1"
 opentofu = "1.11.1"
 python = { version = "3.13.1", virtualenv = ".venv" }
 terraform = "1.11.4"
