--- a/ansible/machines/data-backup-server/roles/configure-rclone-server/tasks/main.yaml
+++ b/ansible/machines/data-backup-server/roles/configure-rclone-server/tasks/main.yaml
@@ -47,7 +47,10 @@
     ports:
     - "8080:8080"
     quadlet_options:
-    - |
+    - |2
+      [Unit]
+      RequiresMountsFor=/var/mnt/backup/data
+
       [Service]
       Restart=on-failure
       RestartSec=5s
