--- a/ansible/machines/rootn/configure.yaml
+++ b/ansible/machines/rootn/configure.yaml
@@ -15,42 +15,60 @@
       cmd: "../../../scripts/unmount_roots.sh"
     changed_when: false
   roles:
-  - role: ../../common/roles/create-system-users
-    system_users:
-    - username: openbao
-      uid: 2000
-  - role: ../../common/roles/mount-encrypted-disk
-    backing_device_uuid: 8658de3c-d4aa-4b64-9b73-42083316d611
-    decrypted_fs_uuid: 9a7d845b-ae34-4e2d-b84d-2c90a3973288
-    disk_mapper_name: rootn
-    keyfile:
-      src: /run/media/wtaylor/ROOTS/keys/rootn-keyfile
-      dest: /root/rootn-keyfile
-      owner: root
-      group: root
-      mode: '0600'
-    mountpoint:
-      path: /mnt/rootn
-      owner: root
-      group: root
-      mode: '0755'
-  - role: ../../common/roles/certificates
-    cloudflare_token: "{{ lookup('ansible.builtin.file', '/run/media/wtaylor/ROOTS/secrets/cloudflare_token') }}"
-    domains:
-    - vault.rootn.tk831.net
-    contact_mail: me@willtaylor.info
-    deploy_hook: |
-      #!/bin/sh
-
-      CERT_DIR="/mnt/rootn/certs"
-
-      cat $RENEWED_LINEAGE/cert.pem > $CERT_DIR/cert.pem
-      cat $RENEWED_LINEAGE/fullchain.pem > $CERT_DIR/fullchain.pem
-      cat $RENEWED_LINEAGE/privkey.pem > $CERT_DIR/privkey.pem
-
-      chown openbao:openbao $CERT_DIR/cert.pem
-      chown openbao:openbao $CERT_DIR/fullchain.pem
-      chown openbao:openbao $CERT_DIR/privkey.pem
-
-      systemctl restart openbao.service
-  - role: ./roles/configure-openbao
+  # - role: ../../common/roles/create-system-users
+  #   system_users:
+  #   - username: openbao
+  #     uid: 2000
+  # - role: ../../common/roles/mount-encrypted-disk
+  #   backing_device_uuid: 8658de3c-d4aa-4b64-9b73-42083316d611
+  #   decrypted_fs_uuid: 9a7d845b-ae34-4e2d-b84d-2c90a3973288
+  #   disk_mapper_name: rootn
+  #   keyfile:
+  #     src: /run/media/wtaylor/ROOTS/keys/rootn-keyfile
+  #     dest: /root/rootn-keyfile
+  #     owner: root
+  #     group: root
+  #     mode: '0600'
+  #   mountpoint:
+  #     path: /mnt/rootn
+  #     owner: root
+  #     group: root
+  #     mode: '0755'
+  # - role: ../../common/roles/certificates
+  #   cloudflare_token: "{{ lookup('ansible.builtin.file', '/run/media/wtaylor/ROOTS/secrets/cloudflare_token') }}"
+  #   domains:
+  #   - vault.rootn.tk831.net
+  #   contact_mail: me@willtaylor.info
+  #   deploy_hook: |
+  #     #!/bin/sh
+  #
+  #     CERT_DIR="/mnt/rootn/certs"
+  #
+  #     cat $RENEWED_LINEAGE/cert.pem > $CERT_DIR/cert.pem
+  #     cat $RENEWED_LINEAGE/fullchain.pem > $CERT_DIR/fullchain.pem
+  #     cat $RENEWED_LINEAGE/privkey.pem > $CERT_DIR/privkey.pem
+  #
+  #     chown openbao:openbao $CERT_DIR/cert.pem
+  #     chown openbao:openbao $CERT_DIR/fullchain.pem
+  #     chown openbao:openbao $CERT_DIR/privkey.pem
+  #
+  #     systemctl restart openbao.service
+  # - role: ./roles/configure-openbao
+  - role: ../../common/roles/restic-backup
+    repository:
+      url: rest:http://data-backup-server.willtaylor.info:8080/hosts/rootn
+      password: "{{ lookup('ansible.builtin.file', '/run/media/wtaylor/ROOTS/secrets/restic_repo_password') }}"
+      rest_username: "{{ lookup('ansible.builtin.file', '/run/media/wtaylor/ROOTS/secrets/restic_rest_username') }}"
+      rest_password: "{{ lookup('ansible.builtin.file', '/run/media/wtaylor/ROOTS/secrets/restic_rest_password') }}"
+    retention:
+      daily: 7
+      weekly: 4
+      monthly: 3
+      yearly: 2
+    systemd:
+      on_calendar: "*-*-* 02:00:00"
+      unit_suffix: host
+    backup_now: true
+    directories:
+    - /mnt/rootn/openbao
+    - /mnt/rootn/certs
